  * new features:
    * add support for .cc and .re domains.
    * when creating new accounts, "www, stats, backups" directories are
      automatically created in their accoutn.
    * when adding a new domain to an account, a directory "www/example.net"
      is automatically created and the domain points to it instead of /.
    * add new field to member form: 'notes' which is just a text field

 -- Antoine Beaupré <anarcat@koumbit.org>  Mon, 20 Oct 2008 16:12:28 -0400

alternc (0.9.9) stable; urgency=low

  * bugfixes:
    * #1080: fix webmail redirection
    * #1128, #1110: translation fixes
    * fix WHOIS lookups for .ca, .com and .net
    * fix ProFTPd TLS/SSL mode
    * #708: remove '-' from the list of authorized usernames
    * put the logout button at the end of the left menu
    * #1124: fix database user configuration
    * FTP/TLS is now working properly (config is RSA not DSA, and key AND
      certif config must be BOTH populated)
    * #1029: do not overwrite the main.cf from postfix
    * #1129: remove 2GB quota limit
    * #1017: fix apache2 configuration
    * #1078: run upgrade scripts properly
  * new features:
    * start logging IP addresses in logs
    * rework the sqlbackup script to allow for date-based backups instead of
      log-like incremental backups
    * #1131: allow admins to make all list URLs be based on the FQDN
    * #1087: allow admins to create user subdomains according to hardcoded
      value or available domains
    * make a new alternc-slave package that eases installation on NFS-backed
      frontend nodes
    * builtin postgrey and Spamhaus blacklisting configuration
    * #1017: complete apache2 support, although apache1 is still the "official"
      platform for now
    * FTP+SSL support
  * other changes:
    * deprecate the mynetwork modification in Postfix, this is now left to the
      admin
    * do not overwrite main.cf
    * do not overwrite named.conf
